--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx,json}\" --cache"
     },
     "dependencies": {
+        "@ai-sdk/google": "^1.1.16",
         "@auth/drizzle-adapter": "^1.7.2",
         "@neondatabase/serverless": "^0.10.4",
         "@radix-ui/react-slot": "^1.1.2",
         "@t3-oss/env-nextjs": "^0.10.1",
+        "ai": "^4.1.44",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "drizzle-orm": "^0.33.0",
