--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
         "lucide-react": "^0.475.0",
         "next": "^15.0.1",
         "next-auth": "5.0.0-beta.25",
+        "next-themes": "^0.4.4",
         "postgres": "^3.4.4",
         "prism-react-renderer": "^2.4.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-markdown": "^9.0.3",
         "remark-gfm": "^4.0.1",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.3"
