--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@t3-oss/env-nextjs": "^0.10.1",
+        "@types/prismjs": "^1.26.5",
         "ai": "^4.1.44",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
         "next-themes": "^0.4.4",
         "postgres": "^3.4.4",
         "prism-react-renderer": "^2.4.1",
+        "prismjs": "^1.29.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-markdown": "^9.0.3",
