--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "@ai-sdk/google": "^1.1.16",
         "@auth/drizzle-adapter": "^1.7.2",
         "@neondatabase/serverless": "^0.10.4",
+        "@radix-ui/react-alert-dialog": "^1.1.6",
+        "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
@@ -46,6 +49,7 @@
         "react-markdown": "^9.0.3",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.1",
+        "swr": "^2.3.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.3"
