--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "ai": "^4.1.44",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "drizzle-orm": "^0.33.0",
         "geist": "^1.3.0",
         "lucide-react": "^0.475.0",
