--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@t3-oss/env-nextjs": "^0.10.1",
+        "@tanstack/react-query": "^5.76.1",
+        "@trpc/client": "^11.1.2",
+        "@trpc/react-query": "^11.1.2",
+        "@trpc/server": "^11.1.2",
         "@types/prismjs": "^1.26.5",
         "ai": "^4.1.44",
         "class-variance-authority": "^0.7.1",
@@ -50,7 +54,7 @@
         "react-markdown": "^9.0.3",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.1",
-        "swr": "^2.3.2",
+        "superjson": "^2.2.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.3"
