--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "dependencies": {
         "@ai-sdk/google": "^1.1.16",
         "@auth/drizzle-adapter": "^1.7.2",
-        "@neondatabase/serverless": "^0.10.4",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
@@ -46,6 +45,7 @@
         "next": "^15.0.1",
         "next-auth": "5.0.0-beta.25",
         "next-themes": "^0.4.4",
+        "pg": "^8.16.0",
         "postgres": "^3.4.4",
         "prism-react-renderer": "^2.4.1",
         "prismjs": "^1.29.0",
@@ -62,6 +62,7 @@
     "devDependencies": {
         "@types/eslint": "^8.56.10",
         "@types/node": "^20.14.10",
+        "@types/pg": "^8.15.2",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^8.1.0",
