--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@t3-oss/env-nextjs": "^0.10.1",
         "@tanstack/react-query": "^5.76.1",
@@ -56,6 +57,7 @@
         "sonner": "^2.0.1",
         "superjson": "^2.2.2",
         "tailwind-merge": "^3.0.1",
+        "tailwind-scrollbar-hide": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.3"
     },
