--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "tailwind-merge": "^3.0.1",
         "tailwind-scrollbar-hide": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
+        "usehooks-ts": "^3.1.1",
         "zod": "^3.23.3"
     },
     "devDependencies": {
