--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "dependencies": {
         "@ai-sdk/google": "^1.1.16",
         "@auth/drizzle-adapter": "^1.7.2",
+        "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.11",
@@ -53,6 +55,7 @@
         "prismjs": "^1.29.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.56.4",
         "react-markdown": "^9.0.3",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.1",
@@ -61,7 +64,7 @@
         "tailwind-scrollbar-hide": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
         "usehooks-ts": "^3.1.1",
-        "zod": "^3.23.3"
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/eslint": "^8.56.10",
