--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@radix-ui/react-tabs": "^1.1.11",
         "@radix-ui/react-toast": "^1.2.13",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@radix-ui/react-visually-hidden": "^1.2.3",
         "@t3-oss/env-nextjs": "^0.10.1",
         "@tanstack/react-query": "^5.76.1",
         "@trpc/client": "^11.1.2",
@@ -43,6 +44,7 @@
         "ai": "^4.1.44",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "drizzle-orm": "^0.33.0",
         "geist": "^1.3.0",
