--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ AUTH_GOOGLE_SECRET=""
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/g7-chat"
 GOOGLE_GENERATIVE_AI_API_KEY=""
+GROQ_API_KEY=""
