--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-collapsible": "^1.1.11",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -40,6 +41,7 @@
         "@radix-ui/react-visually-hidden": "^1.2.3",
         "@t3-oss/env-nextjs": "^0.10.1",
         "@tanstack/react-query": "^5.76.1",
+        "@tanstack/react-table": "^8.21.3",
         "@trpc/client": "^11.1.2",
         "@trpc/react-query": "^11.1.2",
         "@trpc/server": "^11.1.2",
