--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.56.4",
         "react-markdown": "^9.0.3",
+        "remark-directive": "^4.0.0",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.1",
         "superjson": "^2.2.2",
         "tailwind-merge": "^3.0.1",
         "tailwind-scrollbar-hide": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
+        "unist-util-visit": "^5.0.0",
         "usehooks-ts": "^3.1.1",
         "zod": "^3.24.2"
     },
