--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
         "@trpc/client": "^11.1.2",
         "@trpc/react-query": "^11.1.2",
         "@trpc/server": "^11.1.2",
-        "@types/prismjs": "^1.26.5",
         "ai": "^4.1.44",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -59,13 +58,12 @@
         "next-themes": "^0.4.4",
         "pg": "^8.16.0",
         "postgres": "^3.4.4",
-        "prism-react-renderer": "^2.4.1",
-        "prismjs": "^1.29.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.56.4",
         "react-markdown": "^9.0.3",
+        "react-shiki": "^0.7.1",
         "remark-directive": "^4.0.0",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.1",
