--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "react-shiki": "^0.7.1",
         "remark-directive": "^4.0.0",
         "remark-gfm": "^4.0.1",
+        "shiki": "^3.6.0",
         "sonner": "^2.0.1",
         "superjson": "^2.2.2",
         "tailwind-merge": "^3.0.1",
