--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dependencies": {
         "@ai-sdk/google": "^1.1.16",
         "@ai-sdk/groq": "^1.2.9",
+        "@ai-sdk/openai": "^1.3.22",
         "@auth/drizzle-adapter": "^1.7.2",
         "@hookform/resolvers": "^5.0.1",
+        "@openrouter/ai-sdk-provider": "^0.7.1",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.3.2",
@@ -74,7 +76,8 @@
         "tailwindcss-animate": "^1.0.7",
         "unist-util-visit": "^5.0.0",
         "usehooks-ts": "^3.1.1",
-        "zod": "^3.24.2"
+        "zod": "^3.24.2",
+        "zustand": "^5.0.5"
     },
     "devDependencies": {
         "@types/eslint": "^8.56.10",
