--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.15.2",
