--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    env:
+      SKIP_ENV_VALIDATION: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,6 +54,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      SKIP_ENV_VALIDATION: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
