--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,6 +93,8 @@ jobs:
   e2e:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      SKIP_ENV_VALIDATION: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
