--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,8 @@ yarn-error.log*
 # idea files
 .idea
 
-# Playwright
+# playwright
 /playwright-report/
 /test-results/
+/tests/.auth/
 /playwright/.cache/
