--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ AUTH_GOOGLE_SECRET=""
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/g7-chat"
+
+# Guest Mode Configuration (optional)
+# Groq API key for guest users - if not set, guests must provide their own API keys
+GROQ_API_KEY=""
+# Guest message limit per day (default: 10)
+GUEST_MESSAGE_LIMIT="10"
